Added api to move objects from one collecton to another
